# Joinly

./: LICENSE  LobbyMonitor.py  README.md
backend/: app.py  bootstrap.py  joinly.db  launcher.py  requirements.txt  test_setup.py
backend/api/: websocket.py
backend/api/http/: admin.py  bots.py  lobby.py  matchmaking.py
backend/bots/: behavior.py  bot_manager.py  bot_profiles.py
backend/config/: admin.toml  lobby.toml  matchmaking.toml
backend/core/: bot.py  context.py  engine.py  events.py  party.py  permissions.py  player.py  rules.py
backend/matchmaking/: balancer.py  matcher.py  queues.py  tickets.py
backend/native/: bindings.py
backend/services/: analytics.py  heartbeat.py  presence.py  scheduler.py
backend/storage/: base.py  cache.py  leveldb_store.py  sqlite_store.py
control-ui/: README.md  dashboard.css  index.html
docs/: admin_ui.md  api.md  architecture.md  bots.md  storage.md
examples/bot_heavy_lobby/: examples.py
examples/minimal_lobby/: examples.py
frontend-flutter/: pubspec.yaml
frontend-flutter/.dart_tool/: package_config.json  package_graph.json
frontend-flutter/.dart_tool/extension_discovery/: vs_code.json
frontend-flutter/lib/: main.dart
frontend-flutter/lib/core/: joinly_client.dart  models.dart
frontend-flutter/lib/screens/: lobby_screen.dart
frontend-flutter/lib/widgets/: player_tile.dart  ready_button.dart
frontend-web/: index.html  lobby.css
native/crypto/: joinly_crypto.cpp
native/storage/: CMakeLists.txt  joinly_storage.cpp
